Fixing overscroll effect on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,12 @@
   -webkit-text-size-adjust: none;
   -webkit-user-select: none;
 }
-body {
+
+html, body {
+  height: 100%;
   overflow: hidden;
 }
+
 canvas {
   cursor: default;
 }
